--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,37 @@ form .error {
   background-color: #f4f4f4;
   cursor: pointer;
 }
+
+
+.navout{
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f1f1f1;
+  position: sticky;
+  top: 0;
+  
+}
+.expense-online{
+  padding: 2.5px;
+  position: fixed;
+  width:100%;
+  bottom: 0;
+  text-align: center;
+  background-color: #159304;
+  color: #fff;
+  margin: 0px;
+}
+.expense-offline{
+  padding: 2.5px;
+  position: fixed;
+  width:100%;
+  bottom: 0;
+  text-align: center;
+  background-color: #868785;
+  color: #fff;
+  margin: 0px;
+}
